Made some changes

--- a/Flair Prediction Model.ipynb
+++ b/Flair Prediction Model.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "    for post_id in post_id_list:\n",
     "        print(\"getting next post id\")\n",
     "        submission=reddit.submission(id=post_id)\n",
-    "        topics_dict[\"flair\"].append(submission.link_flair_text)\n",
+    "        topics_dict[\"flair\"].append(str(submission.link_flair_text))\n",
     "        topics_dict[\"title\"].append(submission.title)\n",
     "        topics_dict[\"id\"].append(submission.id)\n",
     "        topics_dict[\"url\"].append(submission.url)\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,13 +246,14 @@
     "    topics_data['title_comments_stem']=topics_data['stemmed_titles']+topics_data['stem_comments']\n",
     "    #Get the prediction\n",
     "    print(\"using model to predict flairs\")\n",
+    "    flair_text=topics_data['flair']\n",
     "    prediction=model.predict(topics_data['title_comments_stem']+topics_data['stemmed_url'])\n",
-    "    print(\"Model prediction is \",prediction[0], \"\\n Original post flair is \",(topics_data['flair']))    "
+    "    print(\"Model prediction is \",prediction[0], \"\\n Original post flair is \",topics_data['flair'])    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -266,8 +267,7 @@
       "cleaning the data\n",
       "using model to predict flairs\n",
       "Model prediction is  AskIndia \n",
-      " Original post flair is  0    AskIndia\n",
-      "Name: flair, dtype: object\n"
+      " Original post flair is  Series([], Name: flair, dtype: object)\n"
      ]
     }
    ],
